--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -23,11 +22,27 @@
     </div>
     <div id="start">
       <h1>Blazing Stars</h1>
-      
+
       <p id="startItem1" class="clickable-text">Player Vs Player</p>
       <p id="startItem2" class="clickable-text">Player Vs Computer</p>
       <p id="startItem3" class="clickable-text">Survival Mode</p>
       <p id="startItem4" class="clickable-text">Instructions</p>
+    </div>
+   
+    <div id="instructions">
+      <h2>Instructions</h2>
+      <h3>Player 1 controls:</h3>
+      <p>Move the paddle up: Press the W key.</p>
+      <p>Move the paddle down: Press the S key.</p>
+      <h3>Player 2 controls:</h3>
+      <p>Move the paddle up: Press the up arrow key.</p>
+      <p>Move the paddle down: Press the down arrow key.</p>
+      <p>
+        The objective of the game is to prevent the balls from passing the
+        limits of the canvas sides (left and right). If a ball passes beyond a paddle, the opposing
+        player scores a point.
+      </p>
+      <p id="exit" class="clickable-text">Exit</p>
     </div>
     
     <script src="script.js"></script>
