make the ball movement more smooth, implemented trigonometry to added some styling also to instructions and hover on the start menu

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
       <div class="box-transparent">
         <h2>Instructions</h2>
         <p class="text-instructions">
-          The objective of the game is to prevent the balls from passing the
+          The objective of the game is to prevent the 2 balls from passing the
           limits of the canvas sides (left and right). If a ball passes beyond a
-          paddle, the opposing player scores a point.
+          paddle, the opposing player scores a point. The Player that reaches the 3rd point first wins.
         </p>
         <h3>Player 1 controls:</h3>
-        <p class="text-instructions">Move the paddle up: Press the W key.</p>
-        <p class="text-instructions">Move the paddle down: Press the S key.</p>
+        <p class="text-instructions">Move the paddle up: Press the "W" key.</p>
+        <p class="text-instructions">Move the paddle down: Press the "S" key.</p>
         <h3>Player 2 controls:</h3>
         <p class="text-instructions">
-          Move the paddle up: Press the up arrow key.
+          Move the paddle up: Press the "up arrow" key.
         </p>
         <p class="text-instructions">
-          Move the paddle down: Press the down arrow key.
+          Move the paddle down: Press the "down arrow" key.
         </p>
 
         <p id="exit" class="clickable-text">Exit</p>
