--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
         <p class="text-instructions">
           The objective of the game is to prevent the 2 balls from passing the
           limits of the canvas sides (left and right). If a ball passes beyond a
-          paddle, the opposing player scores a point. The Player that reaches the 3rd point first wins.
+          paddle, the opposing player scores a point. The Player that reaches
+          the 3rd point first wins.
         </p>
         <h3>Player 1 controls:</h3>
         <p class="text-instructions">Move the paddle up: Press the "W" key.</p>
-        <p class="text-instructions">Move the paddle down: Press the "S" key.</p>
+        <p class="text-instructions">
+          Move the paddle down: Press the "S" key.
+        </p>
         <h3>Player 2 controls:</h3>
         <p class="text-instructions">
           Move the paddle up: Press the "up arrow" key.
